# phd_coding

./: README.md
cpp/: CMakeLists.txt
cpp/bc_optimizer/src/: BlockCavingProblem.cpp  BlockCavingProblem.h  BlockModel.cpp  BlockModel.h  Crossover.h  CrowdDistance.h  DrawPoint.h  IntArrayIndividual.h  Makefile  Mutation.cpp  Population.cpp  Population.h  Population.hpp  Selection.h  bc_mo_plain.cpp  bc_so_plain.cpp  cache.hpp  hdf5_utils.cpp  hdf5_utils.h
cpp/blockcaving/: BlockCavingProblem.cpp  BlockCavingProblem.h  CMakeLists.txt  DrawPoint.cpp  DrawPoint.h  hdf5_utils.cpp  hdf5_utils.h
cpp/blockcaving_mo/: CMakeLists.txt  max_npv.cpp
cpp/blockcaving_mo_plain/: CMakeLists.txt  ga.json  max_npv.cpp
cpp/blockcaving_so/: CMakeLists.txt  max_npv.cpp
cpp/example1/: CMakeLists.txt  main.cpp
cpp/ga/: CMakeLists.txt
cpp/ga/src/: CrowdDistance.cpp  CrowdDistance.h  FrontRank.cpp  FrontRank.h  Individual.cpp  Individual.h  IntArrayIndividual.cpp  IntArrayIndividual.h  Mutation.h  Population.cpp  Population.h  Selection.cpp  Selection.h
cpp/plain_ga/: CMakeLists.txt
cpp/plain_ga/src/: Crossover.cpp  Evaluator.h  FrontRank.cpp  FrontRank.h  Individual.h  Population.h  Random.cpp  Random.h  Selection.cpp
python/: nsr.py
python/base/: bcproblem.py  blockmodel.py  drawpoint.py
python/nsr_calculation/: calculate_best_nsr_average_input.py  calculate_nsr.py  calculate_nsr_B.py  calculate_nsr_C.py  calculate_nsr_average_input.py  histogram_nsr.py  nsr.py  nsr_dp_scenarios.py  nsr_test.py
python/optimisation/: bcproblem.py  deap_opt_pc1s1.py  deap_opt_pc1s1_scenario.py  pc1s1.json  runs.txt  stats_many_solutions.py  stats_solution.py
python/post_processing/: create_average_simulation.py  join_simulations_to_backtransform.py  upload_simulation_to_hdf5.py  validation_calculations.py
python/pp/: ppr.f  ppreg.py  ppreg_test.py  read.me  rock.csv  setup.py
python/ppr_models/: apply_best_ppr_models.py  apply_ppr_models.py  apply_ppr_models_B.py  apply_ppr_models_C.py  apply_ppr_models_D.py  clip_ppr_models.py  create_simulations_from_blockmodel.py  ppr_recovery_concentrates.py  validate_load_ppr_models.py
